# SMART_NOTARY_SOURCE

./: README.md
SN_2D-Doc/: Dockerfile  README.md
SN_2D-Doc/src/: handlers.rs
SN_Authentication/: .env  Cargo.toml  Dockerfile  README.md
SN_Authentication/migrations/: 20220422093452_create-tables.sql
SN_Authentication/src/config/: crypto.rs  mod.rs
SN_Authentication/src/db/: user.rs
SN_Authentication/src/handlers/: user.rs
SN_Doc-management/: Dockerfile
SN_Kubernetes_YAML/: ingress.yaml  k8s-ras.yaml  k8s-rdms.yaml  k8s-rqs.yaml  k8s-rws.yaml  k8s-secret.yaml  minio.yaml  postgres.yaml
SN_Web_Interface/: .env  Cargo.toml  Dockerfile  README.md  Rocket.toml
SN_Web_Interface/src/: lib.rs  main.rs
SN_Web_Interface/templates/: MesDocuments.html.tera  Parametre.html.tera  acceuil.html.tera  certif.html.tera  landing_page.html.tera  signin_form.html.tera  signup_form.html.tera
